--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.fragment:fragment:1.3.3'
 
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'androidx.navigation:navigation-runtime:2.3.5'
 
     testImplementation 'junit:junit:4.+'
 
